Updated code to use httprouter Converted table-driven tests to use subtests
